--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,7 +22,7 @@
         <div>
             <h2>Heading</h2>
             <p>No, don't tell me -- there's more??? The API even includes a login test? Gotta try... gotta try...</p>
-            <p><a class="btn" href="@routes.Application.testLogin()">Test Login &raquo;</a></p>
+            <p><a class="btn" href="@routes.WebApp.testLogin()">Test Login &raquo;</a></p>
         </div>
     </div>
 
