--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,17 +12,33 @@
 
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-        <p><a class="btn primary large">Learn more &raquo;</a></p>
+        <h1>Lifescape Manager</h1>
+        <p></p>
+        <p><a class="btn primary large" href="@routes.Auth.login()">Login &raquo;</a>
+           <a class="btn primary large" href="@routes.Auth.logout()">Logout &raquo;</a></p>
     </div>
 
+
     <!-- Example row of columns -->
+
     <div class="row">
-        <div>
-            <h2>Heading</h2>
-            <p>No, don't tell me -- there's more??? The API even includes a login test? Gotta try... gotta try...</p>
-            <p><a class="btn" href="@routes.WebApp.testLogin()">Test Login &raquo;</a></p>
+        <div class="span8"  class="twipsies well">
+            <div>
+                <h2>Asset Management</h2>
+                <p>Get current status of your operating equipment...</p>
+                <p><a class="btn" href="">Equipment Status &raquo;</a></p>
+            </div>
+        </div>
+        <div class="span8"  class="twipsies well">
+            <div>
+                <h2>Workout Activity</h2>
+                <p> </p>
+                <p><a class="btn" href="">Workouts by Equipment &raquo;</a></p>
+                <p> </p>
+                <p><a class="btn primary" href="@routes.Report.showWorkoutLocations()">Workouts by Club &raquo;</a></p>
+                <p> </p>
+                <p><a class="btn" href="@routes.WebApp.testLogin()">Test Login &raquo;</a></p>
+            </div>
         </div>
     </div>
 
