Put IsAthenticated on all controllers. Pass User struc to all pages.

--- a/app/views/gigya.scala.html
+++ b/app/views/gigya.scala.html
@@ -1,6 +1,6 @@
-@(request: play.api.mvc.Request[AnyContent])(implicit flash: play.api.mvc.Flash)
+@(user: User, request: play.api.mvc.Request[AnyContent])(implicit flash: play.api.mvc.Flash)
 
-@main("Gigya Test", 'testLogin) {
+@main(user, "Gigya Test", 'testLogin) {
 
 <p>@request.toString</p>
 <p>@request.body.toString</p>
