Barely got the tiniest, atomic, user edit capability going.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -13,7 +13,7 @@
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
         <h1>Lifescape Manager</h1>
-        <p></p>
+        <p>Brought to you by Life Fitness. Powered by the intelligence of the Netpulse media network.</p>
         <p> @if(!user.email.isEmpty) {
             <a class="btn primary large" href="@routes.Auth.logout()">Logout &raquo;</a></p>
         }
