Switch over to putting the user and session vars into the Play session (cookie) and passing it implicitly to the views.

--- a/app/views/gigya.scala.html
+++ b/app/views/gigya.scala.html
@@ -1,6 +1,6 @@
-@(user: User, request: play.api.mvc.Request[AnyContent])(implicit flash: play.api.mvc.Flash)
+@(request: play.api.mvc.Request[AnyContent])(implicit flash: play.api.mvc.Flash, session: play.api.mvc.Session)
 
-@main(user, "Gigya Test", 'testLogin) {
+@main("Gigya Test", 'testLogin) {
 
 <p>@request.toString</p>
 <p>@request.body.toString</p>
