--- a/app/views/userEdit.scala.html
+++ b/app/views/userEdit.scala.html
@@ -1,4 +1,4 @@
-@(user: User, userForm: Form[User])
+@(userForm: Form[User])(implicit session: play.api.mvc.Session)
 
 @import helper._
 @import helper.twitterBootstrap._
@@ -7,7 +7,7 @@
 Sign Up <small><a href="">Or edit an existing user</a></small>
 }
 
-@main(user, "Account Edit", 'userEdit) {
+@main("Account Edit", 'userEdit) {
 
     @helper.form(action = routes.WebApp.userSubmit) {
 
@@ -16,11 +16,12 @@ Sign Up <small><a href="">Or edit an existing user</a></small>
 
             @inputText( userForm("firstName"),      '_label -> "First name"     )
             @inputText( userForm("lastName"),       '_label -> "Last name"      )
-            @inputText( userForm("email"),          '_label -> "Email"          )
+            @inputText( userForm("email"),          '_label -> "Email",    '_type -> "email"      )
 TODO: Read the inputText Helper code/ docs for email and password handling
             @inputText( userForm("newPass"),        '_label -> "New Password"   )
-            @inputText( userForm("newPassConfirm"),  '_label -> "Confirm Password")
 @*
+            @inputText( userForm("newPassConfirm"),  '_label -> "Confirm Password")
+
             <input type="email" name="email" placeholder="Email" id="email" value="@form("email").value">
             </p>
             <p>
