--- a/app/views/menuBar.scala.html
+++ b/app/views/menuBar.scala.html
@@ -1,4 +1,4 @@
-@(user: User, active: Symbol)
+@(active: Symbol)(implicit session: play.api.mvc.Session)
 
 <div class="topbar">
     <div class="fill">
@@ -12,7 +12,7 @@
                 <li class="@{if(active == 'admin) "active" else "inactive"}"><a href="">Admin</a></li>
                 <li class="@{if(active == 'account) "active" else "inactive"}"><a href="@routes.WebApp.userEdit">Your Account</a></li>
                 <li class="@{if(active == 'contact) "active" else "inactive"}"><a href="">Contact Us</a></li>
-                @if(!user.email.isEmpty) {
+                @if(!session.get("email").isEmpty) {
                     <li class="@{if(active == 'logout) "active" else "inactive"}"><a href="@routes.Auth.logout()">Logout</a></li>
                 }
             </ul>
