--- a/app/views/userEdit.scala.html
+++ b/app/views/userEdit.scala.html
@@ -1,4 +1,4 @@
-@(userForm: Form[User])(implicit session: play.api.mvc.Session)
+@(userForm: Form[User])(implicit flash: Flash, session: play.api.mvc.Session)
 
 @import helper._
 @import helper.twitterBootstrap._
@@ -9,24 +9,39 @@ Sign Up <small><a href="">Or edit an existing user</a></small>
 
 @main("Account Edit", 'userEdit) {
 
-    @helper.form(action = routes.WebApp.userSubmit) {
+
+
+@helper.form(action = routes.WebApp.userSubmit()) {
 
         <fieldset>
-            <legend>Update your account:</legend>
 
-            @inputText( userForm("firstName"),      '_label -> "First name"     )
-            @inputText( userForm("lastName"),       '_label -> "Last name"      )
-            @inputText( userForm("email"),          '_label -> "Email",    '_type -> "email"      )
-TODO: Read the inputText Helper code/ docs for email and password handling
-            @inputText( userForm("newPass"),        '_label -> "New Password"   )
-@*
-            @inputText( userForm("newPassConfirm"),  '_label -> "Confirm Password")
+            <h1>Update Your Account</h1>
 
-            <input type="email" name="email" placeholder="Email" id="email" value="@form("email").value">
-            </p>
-            <p>
-                <input type="password" name="password" id="password" placeholder="Password">
-*@
+            @if(userForm.hasErrors) {
+            <div class="alert-message error">
+                <p><strong>Oops!</strong> Please correct the problems</p>
+            </div>
+            }
+
+            @flash.get("success").map { message =>
+            <div class="alert-message warning">
+                <strong>Success!</strong> @message
+            </div>
+            }
+
+            <div id="actions" class="twipsies well">
+
+                <p>First Name <input type="text" name="firstName" id="firstName" placeholder="Your first name" value="@userForm("firstName").value"></p>
+
+                <p>Last Name <input type="text" name="lastName" id="lastName" placeholder="Your last name" value="@userForm("lastName").value"></p>
+
+                <p>Email Address <input type="email" name="email" placeholder="Email" id="email" value="@userForm("email").value"></p>
+
+                <p>New Password <input type="password" name="password" id="password" placeholder="Optional new password"></p>
+                <p class="note">
+                    A new password is optional. Leave this blank to keep your current password.
+                </p>
+            </div>
 
         </fieldset>
 
