--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,14 +7,14 @@
         <meta charset="utf-8">
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.min.css")" />
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 
 
         <!-- DatePicker assets & code   -->
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/datepicker-bootstrap.css")">
-        <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")" type="text/javascript"></script>
+        @*<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/datepicker-bootstrap.css")">*@
+        @*<script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")" type="text/javascript"></script>*@
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
