--- a/app/views/listWorkoutLocations.scala.html
+++ b/app/views/listWorkoutLocations.scala.html
@@ -62,9 +62,9 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
         <label>@Messages("workouts.location.field.from")</label>
             <div class="input">
                 <div class="inline-inputs">
-                    <input data-datepicker="sd" name="sd" class="small" type="text" value="@startDate" />
+                    <input id="datepicker1" data-datepicker="sd" name="sd" class="small" type="text" value="@startDate" />
                     to
-                    <input data-datepicker="ed" name="ed" class="small" type="text" value="@endDate" />
+                    <input id="datepicker2" data-datepicker="ed" name="ed" class="small" type="text" value="@endDate" />
                     <span class="help-block">@Messages("workouts.location.field.company.help")</span>
                 </div>
             </div>
