--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -7,18 +7,18 @@
         <h1>@Messages("login.header")</h1>
 
         @form.globalError.map { error =>
-            <p class="alert-message warning">
+            <p class="alert alert-error">
                 @error.message
             </p>
         }
 
         @flash.get("success").map { message =>
-            <div class="alert-message warning">
+            <div class="alert alert-success">
             <strong>@Messages("login.flash.success")</strong> @message
             </div>
         }
 
-        <div id="actions" class="twipsies well">
+        <div id="actions" class="well">
             <p>
                 <input type="email" name="email" placeholder=@Messages("login.email.placeholder") id="email" value="@form("email").value">
             </p>
