--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,11 +10,15 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.min.css")" />
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-ui-1.8.18.custom.min.js")" type="text/javascript"></script>
 
-
-        <!-- DatePicker assets & code   -->
-        @*<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/datepicker-bootstrap.css")">*@
-        @*<script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")" type="text/javascript"></script>*@
+        <script>
+        $(document).ready(function() {
+            $("#datepicker").datepicker();
+            $("#datepicker1").datepicker();
+            $("#datepicker2").datepicker();
+        });
+        </script>
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
