--- a/app/views/menuBar.scala.html
+++ b/app/views/menuBar.scala.html
@@ -1,7 +1,7 @@
 @(active: Symbol)(implicit session: play.api.mvc.Session)
 
-<div class="topbar">
-    <div class="fill">
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
         <div class="container">
             <a class="brand" href="@routes.WebApp.index()">S2</a>
             <ul class="nav">
