--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,14 +9,14 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.min.css")" />
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery-ui-1.8.18.custom.min.js")" type="text/javascript"></script>
 
         <script>
+        @* http://docs.jquery.com/UI/Datepicker *@
         $(document).ready(function() {
-            $("#datepicker").datepicker();
-            $("#datepicker1").datepicker();
-            $("#datepicker2").datepicker();
+            $(".datepicker").datepicker({altFormat: "yymmdd"});
         });
         </script>
 
