--- a/app/views/listWorkoutLocations.scala.html
+++ b/app/views/listWorkoutLocations.scala.html
@@ -26,7 +26,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 @main(Messages("page.title.workouts.club"), 'listUsers) {
 
 @* TODO: figure out how to put company name here... *@
-<h2>@Messages("workouts.location.header"), currentPage.total)</h2>
+<h2>@Messages("workouts.location.header")</h2>
 
 @flash.get("success").map { message =>
 <div class="alert-message warning">
@@ -39,7 +39,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
     @helper.form(action=routes.Report.showWorkoutLocations(), args = 'id -> "reportForm") {
     
     <p>
-        <input type="submit" value="Go" class="btn primary pull-right">
+        <input type="submit" value="Go" class="btn btn-primary btn-large pull-right">
 
         @***** Don't show this to non-Netpulse Users ******@
         @* The company ID was put onto the flash object in the controller *@
@@ -59,13 +59,14 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
           }
 
     </p>
-        <label>@Messages("workouts.location.field.from")</label>
-            <div class="input">
-                <div class="inline-inputs">
+
+            <div class="control-group">
+                <label class="control-label" for="input01">@Messages("workouts.location.field.from")</label>
+                <div class="controls">
                     <input name="sd" class="datepicker small" type="text" value="@startDate" />
                     to
                     <input name="ed" class="datepicker small" type="text" value="@endDate" />
-                    <span class="help-block">@Messages("workouts.location.field.from.help")</span>
+                    <p class="help-block">@Messages("workouts.location.field.from.help")</p>
                 </div>
             </div>
 
@@ -102,7 +103,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 </div>
 }
 
-    <table class="users zebra-striped table-bordered table-condensed">
+    <table class="table table-striped table-bordered table-condensed">
         <thead>
         <tr>
             @header(1,  Messages("workouts.location.field.club"))
